[package]
name = "hello3"
version = "0.1.0"
authors = ["kaepa3 <tak_3_zaki3@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
tokio = {version ="0.2.21", features=["macros"]}
async-std= {version="1.6.1", feature=["attributes"]}
async-trait = "0.1.42"
