[package]
name = "rpncalc"
version = "0.1.0"
authors = ["kaepa3 <tak_3_zaki3@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
thiserror = "1.0.23"
