[package]
name = "sample"
version = "0.1.0"
authors = ["kaepa3 <tak_3_zaki3@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.2"

[patch.crates-io]
uuid = {git="https://github.com/uuid-rs/uuid.git"}
